# LamaInterpreter

./: CMakeLists.txt  byterun  interpreter.cpp
build2/: CMakeCache.txt  Makefile  main
performance/: Makefile
regression/: Makefile  test001-1.bc  test001.bc  test003.bc  test004.bc  test006.bc  test008.bc  test010.bc  test011.bc  test012.bc  test014.bc  test015.bc  test018.bc  test019.bc  test020.bc  test021.bc  test022.bc  test023.bc  test024.bc  test025.bc  test026.bc  test027.bc
regression/deep-expressions/: Makefile
regression/expressions/: Makefile
runtime/: runtime.c  runtime.h  runtime.h.gch
tests/: test001.bc  test001.lama  test002.bc  test002.lama  test003.bc  test003.lama  test004.bc  test004.lama  test005.bc  test005.lama  test006.bc  test006.lama  test007.bc  test007.lama  test008.bc  test008.lama  test009.bc  test009.lama  test010.bc  test010.lama  test011.bc  test011.lama  test012.bc  test012.lama  test013.bc  test013.lama  test014.bc  test015.bc  test015.lama  test016.bc  test016.lama  test017.bc  test017.lama  test018.bc  test018.lama  test019.bc  test019.lama  test020.bc  test020.lama  test021.bc  (+17 more)
